--- a/redis-with-acl/config/redis.conf
+++ b/redis-with-acl/config/redis.conf
@@ -740,10 +740,10 @@ replica-priority 100
 # For more information about ACL configuration please refer to
 # the Redis web site at https://redis.io/topics/acl
 
-# user default on +@connection
-# user kurniawan on +@read ~* >rahasia
-# user khannedy on +@read ~khannedy* >rahasia
-# user eko on +@all ~* >rahasia
+user default on +@connection
+user steven on +@read ~* >password
+user andre on +@read ~andre* >password
+user adrew on +@all ~* >password
 
 # ACL LOG
 #
